<resources>
    <string name="app_name">EjercicioMenuFinal</string>

    <string name="miperfil">Mi perfil</string>
    <string name="miscategorias">Mis categorías</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="tabladeporcentajes">Tabla de porcentajes</string>
    <string name="records">Récords</string>
    <string name="configuracion">Configuración</string>
    <string name="registrate">Regístrate</string>
    <string name="entrar">Entrar</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="email">e-mail</string>
    <string name="repetircontraseña">Repetir contraseña</string>
    <string name="mejormarca">Mejor marca</string>
    <string name="añadiracategoria">Añadir a categoría</string>
    <string name="estaciones">Estaciones</string>
    <string name="estacionesporcentaje">Estaciones por %</string>
    <string name="reps">Reps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
