<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.ejerciciomenufinal.ActivityRegistro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dimen50">

        <ImageButton
            android:id="@+id/ibRegistroAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_atras" />

        <EditText
            android:id="@+id/etRegistroUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/usuario" />

        <TextView
            android:id="@+id/tvRegistroUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/etRegistroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/tvRegistroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/etRegistroContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/contraseña" />

        <TextView
            android:id="@+id/tvRegistroContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:id="@+id/etRegistroRepetirContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/repetircontraseña" />

        <TextView
            android:id="@+id/tvRegistroRepetirContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnRegistroRegistrarse"
            android:layout_width="@dimen/dimen200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/estilobotones"
            android:layout_gravity="center"
            android:textSize="@dimen/dimen18"
            android:text="@string/registrate" />


    </LinearLayout>


</LinearLayout>
