<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.ejerciciomenufinal.ActivityEjercicioMusculacion">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre del ejercicio"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="@dimen/dimen25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen30"
        android:layout_marginVertical="@dimen/dimen20"
        android:background="@color/blanco"
        android:orientation="vertical"
        android:padding="@dimen/dimen10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/estaciones"
                android:textSize="@dimen/dimen20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Fecha" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="Serie" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="kg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/reps" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_menos" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_mas" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_menos" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_mas" />
                </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="@dimen/dimen10"
            android:orientation="horizontal">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Estricto"
                android:textSize="@dimen/dimen10"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen10"
                android:layout_weight="1"
                android:text="Ininterrumpido" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen200"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen10">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen50"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/lvEjercicioMusculacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>

        </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/añadiracategoria"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:layout_marginBottom="@dimen/dimen10"/>

    </RelativeLayout>

    </LinearLayout>





